Redesign Logcat Console UI for better UX
Improved the Logcat Console to match the app's design patterns and provide a smoother, cleaner user experience.

UI/UX Improvements:
- Redesigned layout to match Dashboard and Research Tool styles
- Implemented MaterialCardView for clean, modern appearance
- Added collapsible filter panel with smooth 200ms animations
- Simple header with title, Clear, and Back buttons following app style
- Light gray background (#F5F5F5) matching other screens
- Cleaner status bar with streaming info and line count

Code Improvements:
- Simplified LogcatActivity code from 346 to 329 lines
- Removed complex filter button management
- Added smooth expand/collapse animations for filter panel
- Filter panel auto-collapses after selection for cleaner flow
- Reduced MAX_LINES from 1000 to 500 for better performance
- Removed unused imports and simplified view initialization

Design Consistency:
- Uses SimpleButton style matching app-wide buttons
- MaterialCardView with 8dp corner radius and 2dp elevation
- Consistent padding (16dp) and margins (8dp)
- Same color scheme: #212121 for text, #757575 for secondary
- White cards on light gray background pattern

The console now feels native to the app with smooth transitions and a minimal, focused interface.