@@ -8,10 +8,12 @@ import android.os.Looper;
 import android.text.SpannableStringBuilder;
 import android.text.Spanned;
 import android.text.style.ForegroundColorSpan;
-import android.text.style.StyleSpan;
 import android.util.Log;
 import android.view.View;
+import android.view.animation.Animation;
+import android.view.animation.Transformation;
 import android.widget.Button;
+import android.widget.LinearLayout;
 import android.widget.ScrollView;
 import android.widget.TextView;
 
@@ -20,21 +22,20 @@ import androidx.appcompat.app.AppCompatActivity;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.text.SimpleDateFormat;
-import java.util.Date;
-import java.util.Locale;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 
 public class LogcatActivity extends AppCompatActivity {
     private static final String TAG = "NotMe_LogcatActivity";
-    private static final int MAX_LINES = 1000; // Maximum lines to keep in memory
+    private static final int MAX_LINES = 500;
 
     private TextView logText;
     private TextView statusText;
     private TextView logCountText;
+    private TextView currentFilterText;
+    private TextView expandIcon;
     private ScrollView logScrollView;
-    private Button filterAll, filterDebug, filterInfo, filterWarn, filterError;
+    private LinearLayout filterPanel;
 
     private ExecutorService executorService;
     private Process logcatProcess;
@@ -45,6 +46,7 @@ public class LogcatActivity extends AppCompatActivity {
     private int lineCount = 0;
     private String currentFilter = "ALL";
     private boolean autoScroll = true;
+    private boolean filterExpanded = false;
     private int myPid;
 
     @Override
@@ -58,7 +60,7 @@ public class LogcatActivity extends AppCompatActivity {
         Log.d(TAG, "onCreate: Current process PID=" + myPid);
 
         initializeViews();
-        setupFilterButtons();
+        setupListeners();
         mainHandler = new Handler(Looper.getMainLooper());
         logBuffer = new SpannableStringBuilder();
 
@@ -67,31 +69,19 @@ public class LogcatActivity extends AppCompatActivity {
     }
 
     private void initializeViews() {
-        logText = findViewById(R.id.logText);
-        statusText = findViewById(R.id.statusText);
-        logCountText = findViewById(R.id.logCountText);
-        logScrollView = findViewById(R.id.logScrollView);
+        logText = findViewById(R.id.txt_log_content);
+        statusText = findViewById(R.id.txt_status);
+        logCountText = findViewById(R.id.txt_log_count);
+        currentFilterText = findViewById(R.id.txt_current_filter);
+        expandIcon = findViewById(R.id.txt_expand_icon);
+        logScrollView = findViewById(R.id.log_scroll_view);
+        filterPanel = findViewById(R.id.filter_panel);
 
-        filterAll = findViewById(R.id.filterAll);
-        filterDebug = findViewById(R.id.filterDebug);
-        filterInfo = findViewById(R.id.filterInfo);
-        filterWarn = findViewById(R.id.filterWarn);
-        filterError = findViewById(R.id.filterError);
+        Button backBtn = findViewById(R.id.btn_back);
+        backBtn.setOnClickListener(v -> finish());
 
-        Button backBtn = findViewById(R.id.backBtn);
-        backBtn.setOnClickListener(v -> {
-            Log.d(TAG, "Back button pressed, finishing activity");
-            finish();
-        });
-
-        Button clearBtn = findViewById(R.id.clearBtn);
-        clearBtn.setOnClickListener(v -> {
-            Log.d(TAG, "Clear button pressed, clearing log buffer");
-            clearLogs();
-        });
-
-        Button scrollDownBtn = findViewById(R.id.scrollDownBtn);
-        scrollDownBtn.setOnClickListener(v -> scrollToBottom());
+        Button clearBtn = findViewById(R.id.btn_clear);
+        clearBtn.setOnClickListener(v -> clearLogs());
 
         // Detect manual scrolling
         logScrollView.getViewTreeObserver().addOnScrollChangedListener(() -> {
@@ -101,161 +91,158 @@ public class LogcatActivity extends AppCompatActivity {
         });
     }
 
-    private void setupFilterButtons() {
-        View.OnClickListener filterListener = v -> {
-            Button clicked = (Button) v;
+    private void setupListeners() {
+        // Toggle filter panel
+        View filterHeader = findViewById(R.id.filter_header);
+        filterHeader.setOnClickListener(v -> toggleFilterPanel());
 
-            // Update filter state
-            if (clicked == filterAll) {
-                currentFilter = "ALL";
-            } else if (clicked == filterDebug) {
-                currentFilter = "D";
-            } else if (clicked == filterInfo) {
-                currentFilter = "I";
-            } else if (clicked == filterWarn) {
-                currentFilter = "W";
-            } else if (clicked == filterError) {
-                currentFilter = "E";
+        // Filter buttons
+        findViewById(R.id.btn_filter_all).setOnClickListener(v -> setFilter("ALL"));
+        findViewById(R.id.btn_filter_debug).setOnClickListener(v -> setFilter("D"));
+        findViewById(R.id.btn_filter_info).setOnClickListener(v -> setFilter("I"));
+        findViewById(R.id.btn_filter_warn).setOnClickListener(v -> setFilter("W"));
+        findViewById(R.id.btn_filter_error).setOnClickListener(v -> setFilter("E"));
+    }
+
+    private void toggleFilterPanel() {
+        if (filterExpanded) {
+            collapse(filterPanel);
+            expandIcon.setText("▼");
+        } else {
+            expand(filterPanel);
+            expandIcon.setText("▲");
+        }
+        filterExpanded = !filterExpanded;
+    }
+
+    private void expand(final View view) {
+        view.measure(View.MeasureSpec.UNSPECIFIED, View.MeasureSpec.UNSPECIFIED);
+        final int targetHeight = view.getMeasuredHeight();
+
+        view.getLayoutParams().height = 1;
+        view.setVisibility(View.VISIBLE);
+
+        Animation animation = new Animation() {
+            @Override
+            protected void applyTransformation(float interpolatedTime, Transformation t) {
+                view.getLayoutParams().height = interpolatedTime == 1
+                        ? LinearLayout.LayoutParams.WRAP_CONTENT
+                        : (int)(targetHeight * interpolatedTime);
+                view.requestLayout();
             }
 
-            Log.d(TAG, "Filter changed to: " + currentFilter);
-            updateFilterButtons();
-            restartLogcatReader();
+            @Override
+            public boolean willChangeBounds() {
+                return true;
+            }
         };
 
-        filterAll.setOnClickListener(filterListener);
-        filterDebug.setOnClickListener(filterListener);
-        filterInfo.setOnClickListener(filterListener);
-        filterWarn.setOnClickListener(filterListener);
-        filterError.setOnClickListener(filterListener);
+        animation.setDuration(200);
+        view.startAnimation(animation);
     }
 
-    private void updateFilterButtons() {
-        // Reset all to outlined style
-        resetButtonStyle(filterAll);
-        resetButtonStyle(filterDebug);
-        resetButtonStyle(filterInfo);
-        resetButtonStyle(filterWarn);
-        resetButtonStyle(filterError);
+    private void collapse(final View view) {
+        final int initialHeight = view.getMeasuredHeight();
 
-        // Highlight active filter
-        Button activeButton = null;
-        switch (currentFilter) {
-            case "ALL": activeButton = filterAll; break;
-            case "D": activeButton = filterDebug; break;
-            case "I": activeButton = filterInfo; break;
-            case "W": activeButton = filterWarn; break;
-            case "E": activeButton = filterError; break;
-        }
+        Animation animation = new Animation() {
+            @Override
+            protected void applyTransformation(float interpolatedTime, Transformation t) {
+                if (interpolatedTime == 1) {
+                    view.setVisibility(View.GONE);
+                } else {
+                    view.getLayoutParams().height = initialHeight - (int)(initialHeight * interpolatedTime);
+                    view.requestLayout();
+                }
+            }
 
-        if (activeButton != null) {
-            activeButton.setAlpha(1.0f);
-        }
+            @Override
+            public boolean willChangeBounds() {
+                return true;
+            }
+        };
+
+        animation.setDuration(200);
+        view.startAnimation(animation);
     }
 
-    private void resetButtonStyle(Button button) {
-        button.setAlpha(0.6f);
+    private void setFilter(String filter) {
+        currentFilter = filter;
+        currentFilterText.setText(filter);
+        Log.d(TAG, "Filter changed to: " + filter);
+
+        // Collapse filter panel after selection
+        if (filterExpanded) {
+            toggleFilterPanel();
+        }
+
+        restartLogcatReader();
     }
 
     private void startLogcatReader() {
-        Log.d(TAG, "startLogcatReader: Starting logcat reader with filter=" + currentFilter);
+        Log.d(TAG, "startLogcatReader: Starting with filter=" + currentFilter);
 
         executorService.execute(() -> {
             try {
-                // Clear previous logcat buffer and start fresh
-                String[] clearCmd = {"logcat", "-c"};
-                Runtime.getRuntime().exec(clearCmd).waitFor();
+                // Clear previous logcat
+                Runtime.getRuntime().exec(new String[]{"logcat", "-c"}).waitFor();
 
-                // Build logcat command with PID filter
-                String filterSpec = currentFilter.equals("ALL")
-                    ? "*:D"
-                    : "*:" + currentFilter;
+                // Build logcat command
+                String filterSpec = currentFilter.equals("ALL") ? "*:D" : "*:" + currentFilter;
+                String[] cmd = {"logcat", "-v", "time", "--pid=" + myPid, filterSpec};
 
-                String[] logcatCmd = {
-                    "logcat",
-                    "-v", "time",  // Include timestamp
-                    "--pid=" + myPid,  // Filter by our process ID
-                    filterSpec
-                };
-
-                Log.d(TAG, "startLogcatReader: Executing logcat command");
-                logcatProcess = Runtime.getRuntime().exec(logcatCmd);
+                logcatProcess = Runtime.getRuntime().exec(cmd);
                 logcatReader = new BufferedReader(
                     new InputStreamReader(logcatProcess.getInputStream()), 8192);
 
                 mainHandler.post(() -> {
-                    statusText.setText("Streaming logs (PID: " + myPid + ") - Filter: " + currentFilter);
-                    Log.d(TAG, "startLogcatReader: Logcat streaming started");
+                    statusText.setText("Streaming logs (PID: " + myPid + ")");
+                    Log.d(TAG, "startLogcatReader: Streaming started");
                 });
 
                 String line;
                 while ((line = logcatReader.readLine()) != null) {
-                    if (Thread.currentThread().isInterrupted()) {
-                        break;
-                    }
-
+                    if (Thread.currentThread().isInterrupted()) break;
                     final String logLine = line;
                     mainHandler.post(() -> appendLogLine(logLine));
                 }
 
             } catch (IOException | InterruptedException e) {
-                Log.e(TAG, "startLogcatReader: Error reading logcat", e);
-                mainHandler.post(() ->
-                    statusText.setText("Error: " + e.getMessage()));
+                Log.e(TAG, "startLogcatReader: Error", e);
+                mainHandler.post(() -> statusText.setText("Error: " + e.getMessage()));
             }
         });
     }
 
     private void appendLogLine(String line) {
-        if (line == null || line.trim().isEmpty()) {
-            return;
-        }
+        if (line == null || line.trim().isEmpty()) return;
 
-        // Parse log level and colorize
         SpannableStringBuilder coloredLine = new SpannableStringBuilder();
-        int color = Color.WHITE;
+        int color = 0xFF212121; // Default dark gray
 
-        // Detect log level (format: MM-DD HH:MM:SS.mmm D/TAG: message)
+        // Colorize by log level
         if (line.contains(" D/")) {
-            color = 0xFF4CAF50; // Green for Debug
+            color = 0xFF4CAF50; // Green
         } else if (line.contains(" I/")) {
-            color = 0xFF2196F3; // Blue for Info
+            color = 0xFF2196F3; // Blue
         } else if (line.contains(" W/")) {
-            color = 0xFFFFC107; // Amber for Warning
+            color = 0xFFFFA726; // Orange
         } else if (line.contains(" E/")) {
-            color = 0xFFF44336; // Red for Error
+            color = 0xFFF44336; // Red
         }
 
         coloredLine.append(line);
         coloredLine.append("\n");
 
-        // Apply color to entire line
         coloredLine.setSpan(
             new ForegroundColorSpan(color),
-            0,
-            line.length(),
+            0, line.length(),
             Spanned.SPAN_EXCLUSIVE_EXCLUSIVE
         );
-
-        // Make log level bold
-        int levelStart = line.indexOf(" D/");
-        if (levelStart < 0) levelStart = line.indexOf(" I/");
-        if (levelStart < 0) levelStart = line.indexOf(" W/");
-        if (levelStart < 0) levelStart = line.indexOf(" E/");
-
-        if (levelStart > 0 && levelStart + 3 < line.length()) {
-            coloredLine.setSpan(
-                new StyleSpan(Typeface.BOLD),
-                levelStart + 1,
-                levelStart + 2,
-                Spanned.SPAN_EXCLUSIVE_EXCLUSIVE
-            );
-        }
 
         logBuffer.append(coloredLine);
         lineCount++;
 
-        // Trim buffer if too large
+        // Trim if too large
         if (lineCount > MAX_LINES) {
             int firstNewline = logBuffer.toString().indexOf('\n');
             if (firstNewline > 0) {
@@ -265,10 +252,10 @@ public class LogcatActivity extends AppCompatActivity {
         }
 
         logText.setText(logBuffer);
-        logCountText.setText("Lines: " + lineCount);
+        logCountText.setText(lineCount + " lines");
 
         if (autoScroll) {
-            scrollToBottom();
+            logScrollView.post(() -> logScrollView.fullScroll(View.FOCUS_DOWN));
         }
     }
 
@@ -276,22 +263,17 @@ public class LogcatActivity extends AppCompatActivity {
         logBuffer.clear();
         lineCount = 0;
         logText.setText("Logs cleared. Waiting for new logs...");
-        logCountText.setText("Lines: 0");
-        Log.d(TAG, "clearLogs: Log buffer cleared");
-    }
-
-    private void scrollToBottom() {
-        logScrollView.post(() ->
-            logScrollView.fullScroll(View.FOCUS_DOWN));
+        logCountText.setText("0 lines");
+        Log.d(TAG, "clearLogs: Cleared");
     }
 
     private void restartLogcatReader() {
-        Log.d(TAG, "restartLogcatReader: Restarting with new filter");
+        Log.d(TAG, "restartLogcatReader: Restarting");
         stopLogcatReader();
         clearLogs();
         executorService.execute(() -> {
             try {
-                Thread.sleep(100); // Small delay before restart
+                Thread.sleep(100);
             } catch (InterruptedException e) {
                 Thread.currentThread().interrupt();
             }
@@ -300,7 +282,7 @@ public class LogcatActivity extends AppCompatActivity {
     }
 
     private void stopLogcatReader() {
-        Log.d(TAG, "stopLogcatReader: Stopping logcat reader");
+        Log.d(TAG, "stopLogcatReader: Stopping");
 
         if (logcatReader != null) {
             try {
@@ -320,7 +302,7 @@ public class LogcatActivity extends AppCompatActivity {
     @Override
     protected void onDestroy() {
         super.onDestroy();
-        Log.d(TAG, "onDestroy: Cleaning up resources");
+        Log.d(TAG, "onDestroy: Cleaning up");
 
         stopLogcatReader();
 
@@ -336,12 +318,12 @@ public class LogcatActivity extends AppCompatActivity {
     @Override
     protected void onResume() {
         super.onResume();
-        Log.d(TAG, "onResume: Logcat console visible");
+        Log.d(TAG, "onResume: Console visible");
     }
 
     @Override
     protected void onPause() {
         super.onPause();
-        Log.d(TAG, "onPause: Logcat console paused");
+        Log.d(TAG, "onPause: Console paused");
     }
 }
